# OCRAggregatorServer

./: .gitignore  LICENSE  README.md  darknet.py  main.py  ocr_aggregator_server.py  pyproject.toml  requirements.txt  setup.cfg  standalone.py
.github/workflows/: build.yml
hooks/: hook-manga_ocr.py  hook-ocr_aggregator_server.py  hook-unidic_lite.py
ocr_aggregator_server/: __init__.py  __main__.py  server.py
scripts/: build-clean.ps1  build-standalone.ps1  buildthing.sh  macos_install.py  macos_install.sh  util.ps1
test/: test.py
