[project]
name = "ocr_aggregator_server"
authors = [
    {name = "millenniumbug", email = "millenniumbug@gmail.com"},
]
description = "OCR Aggretgator server for Magic Translatior"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
dependencies = [
    "pytest>=3.0.7",
    "Flask>=2.0.2",
    "flask-cors>=3.0.10",
    "manga-ocr>=0.1.11",
    "fugashi>=1.3.0",
    "Pillow>=10.0.0",
    "opencv-python~=4.5.5.62",
    "np~=1.0.2",
    "pytesseract",
    "requests",
    "libdarknetpy"
]
dynamic = ["version"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["ocr_aggregator_server"]
include-package-data = true

[tool.setuptools.package-data]
ocr_aggregator_server = ["data/*"]
