[metadata]
name = ocr_aggregator_server
description = Applied Configuration Management
version = 0.0.1
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Plus3IT Maintainers of Watchmaker
author_email = projects@plus3it.com
url = https://github.com/plus3it/watchmaker
license = MIT License
platforms =
    Linux
    Windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
install_requires =
    pytest>=3.0.7
    Flask>=2.0.2
    flask-cors>=3.0.10
    manga-ocr>=0.1.11
    fugashi>=1.3.0
    Pillow>=10.0.0
    opencv-python~=4.5.5.62
    np~=1.0.2
    pytesseract
    requests
    libdarknetpy
# package_dir =
#     = src
packages = find:
include_package_data = True